# APC

./: .buildinfo  .gitignore  APC.html  Adaptive Picard Iteration.html  CMakeLists.txt  Dynamic Model.html  GRGM1200b_250x250_100km.txt  README.md  annotated.html  class_chebyshev_ephemeris-members.html  class_chebyshev_ephemeris.html  class_ephemeris_manager-members.html  class_ephemeris_manager.html  class_orbit-members.html  class_orbit.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  flags_8h.html  genindex.html  get_spice.py  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  struct_chebyshev_coefficients-members.html  struct_chebyshev_coefficients.html  struct_iter_counters-members.html  struct_iter_counters.html  struct_sat_state-members.html  struct_sat_state.html  usage.html
.github/workflows/: build_wheels.yml  docs.yml
APCTests/: CMakeLists copy.txt  CMakeLists.txt
APCTests/src/: CMakeLists.txt  ConstellationTest.cpp  ConstellationTest.h  ConstellationTests.cpp  ConstellationTests.h  EphemerisManagerTests.cpp  EphemerisManagerTests.h  EphemerisRotationTests.cpp  EphemerisRotationTests.h  GravTests.cpp  GravTests.h  OrbitClassTests.cpp  OrbitClassTests.h  test.cpp
_sources/: APC.rst.txt  Dynamic Model.rst.txt  index.rst.txt  usage.rst.txt
debugtools/: debugvis.py
docs_doxygen/: Doxyfile.in
docs_sphinx/: APC.rst  Adaptive Picard Iteration.rst  Doxyfile.in  conf.py  index.rst  usage.rst
include/: APC.h  APCParallel.h  Constellation.h  EGM2008.h  Ephemeris.hpp  EphemerisRotation.h  FandG.h  GRGM1200b.h  Gravity.h  Orbit.h  TwoBody.h  adaptive_picard_chebyshev.h  c_functions.h  c_functions2.hpp  chebyshev.h  classical2mee.h  clenshaw_curtis_ivpI.h  clenshaw_curtis_ivpII.h  clohessywiltshire.h  const.h  const.hpp  ecef2eci.h  eci2ecef.h  flags.h  inertial2radial.h  interpolate.h  lsq_chebyshev_fit.h  lunar_perturbed_gravity.h  matrix_loader.h  mee2rv.h  mee_dot.h  offset_gravity.h  perigee_approx.h  perturbations.h  perturbed_gravity.h  picard_chebyshev_propagator.h  picard_error_feedback.h  picard_iteration.h  polydegree_segments.h  preferences.h  (+4 more)
search/: all_0.js  all_1.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  searchdata.js
src/: APC.cpp  CCQ_tests.cpp  CMakeLists.txt  Constellation.cpp  EGM2008.cpp  Ephemeris 2.cpp  Ephemeris.cpp  EphemerisRotation.cpp  FandG.cpp  GRGM1200b.cc  GRGM1200b.cpp  Gravity.cpp  Orbit.cpp  RK45.cpp  TwoBody.cpp  adaptive_picard_chebyshev.cpp  c_functions.cpp  c_functions2.cpp  chebyshev.cpp  classical2mee.cpp  clenshaw_curtis_ivpI.cpp  clenshaw_curtis_ivpII.cpp  clohessywiltshire.cpp  ecef2eci.cpp  eci2ecef.cpp  flags.cpp  hello world parallel.cpp  inertial2radial.cpp  interpolate.cpp  linktest.cpp  lsq_chebyshev_fit.cpp  lunar_perturbed_gravity.cpp  main_APC.cpp  main_CW_tradestudy.cpp  main_Parallel_Seg.cpp  main_bootstrap.cpp  main_bootstrap_tradestudy.cpp  main_degree_trade_study.cpp  main_hamiltonian_error.cpp  main_interpolate.cpp  (+18 more)
srcMB/: CMakeLists.txt  matrix_builder.cpp
srcMP/: APCParallel.cpp
srcPy/: PyModule.cpp
srcTest/: CMakeLists.txt  test.cpp
